# VirtualDesktopSwitcher

./: .clang-format  .gitignore  CMakeLists.txt  DesktopManager.cpp  DesktopManager.h  MouseHook.cpp  MouseHook.h  OverlayUI.cpp  OverlayUI.h  QWEN.md  README.md  Settings.cpp  Settings.h  TestRunner.cpp  TrayIcon.cpp  TrayIcon.h  VirtualDesktopSwitcher.cpp  virtual_desktop_switcher_architecture.md  virtual_desktop_switcher_development_plan.md  virtual_desktop_switcher_requirements.md
.comate/: mcp.json
.comate/rules/: cleancode.mdr  codequality.mdr  cpp.mdr
app/: CMakeLists.txt  TrayIcon.cpp  app.cpp  app.h  main.cpp
core/: CMakeLists.txt
core/include/: DesktopManager.h  GestureAnalyzer.h  IRenderer.h  MouseHook.h  OverlayUI.h  Settings.h  VirtualDesktopSwitcher.h  utils.h
core/src/: DxRenderer.cpp  DxRenderer.h  GdiRenderer.cpp  GdiRenderer.h  GestureAnalyzer.cpp  OverlayUI.cpp  RendererFactory.cpp  Settings.cpp
doc/: config_editor.html  setting_ui.md  virtual_desktop_switcher_architecture.md  virtual_desktop_switcher_requirements.md
include/: DesktopManager.h  MouseHook.h  OverlayUI.h  Settings.h  TrayIcon.h  VirtualDesktopSwitcher.h  utils.h
include/GestureAnalyzer/: GestureAnalyzer.h
include/MouseHook/: MouseHook.h
include/OverlayUI/: GdiRenderer.h  MouseTrailRenderer.h  OverlayUI.h
include/Settings/: Settings.h
include/TrayIcon/: TrayIcon.h
launcher/: CMakeLists.txt  main.cpp
src/: DesktopManager.cpp  MouseHook.cpp  OverlayUI.cpp  Settings.cpp  TrayIcon.cpp  VirtualDesktopSwitcher.cpp  app.cpp  app.h  main.cpp  resource.aps  resource.h  resource.rc  utils.cpp  utils.h
src/DesktopManager/: DesktopManager.cpp  DesktopManager.h
src/GestureAnalyzer/: GestureAnalyzer.cpp  GestureAnalyzer.h
src/MouseHook/: MouseHook.cpp  MouseHook.h
src/OverlayUI/: DxRenderer.cpp  DxRenderer.h  GdiRenderer.h  MouseTrailRenderer.cpp  MouseTrailRenderer.h  OverlayUI.cpp  OverlayUI.h
src/Resource/: resource.rc
src/Resources/: resource.h  resources.rc
src/Settings/: Settings.cpp  Settings.h  SettingsView.cpp  SettingsView.h
src/TrayIcon/: TrayIcon.cpp  TrayIcon.h
test/GestureAnalyzer/: GestureAnalyzerTest.cpp
test/Integration/: SystemIntegrationTest.cpp
test/MouseHook/: MouseHookTest.cpp
virtual_desktop_switch/: CMakeLists.txt
virtual_desktop_switch/include/: VirtualDesktopSwitcher.h
virtual_desktop_switch/src/: VirtualDesktopSwitcher.cpp  app.cpp  app.h  utils.cpp  utils.h
virtual_desktop_switch/src/DesktopManager/: DesktopManager.cpp  DesktopManager.h
virtual_desktop_switch/src/GestureAnalyzer/: GestureAnalyzer.cpp
virtual_desktop_switch/src/MouseHook/: MouseHook.cpp
virtual_desktop_switch/src/OverlayUI/: DxRenderer.cpp  DxRenderer.h  GdiRenderer.cpp  GdiRenderer.h  IRenderer.h  OverlayUI.cpp
virtual_desktop_switch/src/Resource/: resource.rc
virtual_desktop_switch/src/Settings/: Settings.cpp  Settings.h
virtual_desktop_switch/src/TrayIcon/: TrayIcon.cpp
